# auto-erdos

./: .gitignore  CLAUDE.md  README.md  log_result.py  prepare.py  program.md  proof_journal.jsonl  proof_log_result.py  proof_open_questions.jsonl  proof_prepare.py  proof_program.md  proof_session_end.py  proof_session_handoff.md  proof_session_start.py  proof_strategy.md  pyproject.toml  running_best.py  strategy.py  write_paper.py
papers/: sidon_100_12_1e03504__claude-opus-4-7.meta.json  sidon_100_12_1e03504__claude-opus-4-7.tex
problems/: capset_n10.json  capset_n4.json  capset_n5.json  capset_n6.json  capset_n7.json  capset_n8.json  capset_n9.json  sidon_100.json  sidon_1000.json  sidon_3000.json  sidon_500.json
prompts/: critic_internal.md  critic_ledger.md  critic_numerical.md  critic_openness.md  critic_sign.md  paper_writeup.md  proof_only.md
proof_lemmas/: README.md
proofs/: erdos_mollin_walsh.json  erdos_primitive_set_basic.json  erdos_szemeredi_sum_product.json  primitive_set_erdos.json
records/: proof_primitive_set_erdos_4c5f63dd457e_0c0eaf1.json  proof_primitive_set_erdos_c968ed8a9a3f_93ddb14.json  proof_primitive_set_erdos_f9bda2130738_ba9fa36.json  sidon_1000_33_445ab6f.json  sidon_1000_35_6805298.json  sidon_1000_35_f007eaf.json  sidon_100_12_1e03504.json  sidon_100_12_3de1b29.json  sidon_100_12_da91018.json  sidon_100_12_f36a800.json  sidon_3000_59_2dd2a29.json  sidon_3000_59_945854a.json  sidon_500_24_001b9d6.json  sidon_500_24_16a3247.json  sidon_500_24_6c357d3.json  sidon_500_26_a1c1c6b.json
scripts/: find_cap_n6_size112.py
(+46 files in other folders)
